refactor: 스트림 개선